--- a/pinpad.css
+++ b/pinpad.css
@@ -1,13 +1,13 @@
 .button {
   display: inline-grid;
-  border-radius: 4px;
-  background-color:#ffe2f2;
+  border-radius: 15px;
+  background-color: inherit; /*#61daff*/
   border: bold;
-  color: FloralWhite;
+  color: rgb(77, 75, 73);
   text-align: center;
   font-size: 25px;
   padding: 15px;
-  width: 120px;
+  width: 80px;
   cursor: pointer;
   margin: 5px;
   position: relative;
@@ -15,18 +15,21 @@
 }
 
 .header{
-  border: bold;
+  border: groove;
+  border-color: rgb(250, 250, 250);
   border-width: medium;
   width: 540;
   font-size: 20px;
-  background-color: #84e657;
+  background-color: inherit;
 }
 
 div{
   align: center;
+  padding-top: 10px;
+  padding-bottom: 30px;
   border-radius: 20px;
-  max-width: 540px;
-  background-color: #84e657;
+  max-width: 370px;
+  background-color: #72dada;
   padding-bottom: 10px;
 
 }
