--- a/pinpad.css
+++ b/pinpad.css
@@ -1,9 +1,10 @@
 .button {
   display: inline-grid;
   border-radius: 15px;
-  background-color: inherit; /*#61daff*/
+  background-color: #083d77; /*#61daff*/
+  opacity: .80;
   border: bold;
-  color: rgb(77, 75, 73);
+  color: FloralWhite;
   text-align: center;
   font-size: 25px;
   padding: 15px;
@@ -20,7 +21,7 @@
   border-width: medium;
   width: 540;
   font-size: 20px;
-  background-color: inherit;
+  background-color: #928C83;
 }
 
 div{
@@ -29,7 +30,7 @@ div{
   padding-bottom: 30px;
   border-radius: 20px;
   max-width: 370px;
-  background-color: #72dada;
+  background-color: #2e4057;
   padding-bottom: 10px;
 
 }
