--- a/pinpad.css
+++ b/pinpad.css
@@ -1,36 +1,60 @@
 .button {
   display: inline-grid;
-  border-radius: 15px;
+  border-radius: 50%;
   background-color: #083d77; /*#61daff*/
-  opacity: .80;
-  border: bold;
+  border: none;
   color: FloralWhite;
   text-align: center;
-  font-size: 25px;
-  padding: 15px;
-  width: 80px;
+  font-size: 150%;
+  padding: 4%;
+  width: 17%;
+  outline: none;
   cursor: pointer;
-  margin: 5px;
+  margin: 1%;
   position: relative;
-  font-family: Impact, Charcoal, sans-serif;
+  box-shadow: 0 2px #999;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+}
+
+.button:hover {
+  background-color: #234f7e;
+}
+
+.button:active {
+  background-color: #234f7e;
+  box-shadow: 0 1px #666;
+  transform: translateY(5%);
 }
 
 .header{
   border: groove;
-  border-color: rgb(250, 250, 250);
-  border-width: medium;
-  width: 540;
-  font-size: 20px;
-  background-color: #928C83;
+  border: none;
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  outline: none;
+  border-radius: 8px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 67.57%;
+  font-size: 130%;
+  background-color: #bbbbbb;
+}
+
+.special{
+  font-size: 130%;
 }
 
 div{
   align: center;
-  padding-top: 10px;
-  padding-bottom: 30px;
-  border-radius: 20px;
-  max-width: 370px;
-  background-color: #2e4057;
-  padding-bottom: 10px;
+  padding-top: 2.8%;
+  padding-bottom: 8.1%;
+  border-radius: 5.4%;
+  max-width: 320px;
+  background-color: #374a62;
+  padding-bottom: 4%;
 
+}
+
+h1{
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
 }
