--- a/pinpad.css
+++ b/pinpad.css
@@ -49,7 +49,9 @@ div{
   padding-top: 2.8%;
   padding-bottom: 8.1%;
   border-radius: 5.4%;
+  width: 35%; /*320px*/
   max-width: 320px;
+  height: 35%; /*300px*/
   background-color: #374a62;
   padding-bottom: 4%;
 
