--- a/pinpad.css
+++ b/pinpad.css
@@ -1,3 +1,8 @@
+body {
+  width: 800px;
+  height: 500px;
+}
+
 .button {
   display: inline-grid;
   border-radius: 50%;
@@ -45,6 +50,7 @@
 }
 
 div{
+  margin: auto;
   align: center;
   padding-top: 2.8%;
   padding-bottom: 8.1%;
@@ -52,6 +58,7 @@ div{
   width: 35%; /*320px*/
   max-width: 320px;
   height: 35%; /*300px*/
+  
   background-color: #374a62;
   padding-bottom: 4%;
 
