--- a/instance.css
+++ b/instance.css
@@ -1,10 +1,7 @@
 .instance {
-    width: 200px;
-    height: 40px;
-    padding: 10px 40px;
-    outline: none;
-    border-radius: 100px;
+    padding-right: 3%;
 }
+
 
 h1{
   font-family: Garamond, serif;
@@ -14,20 +11,20 @@ h1{
 body {
   width: 500px;
   height: 300px;
+  background-color: FloralWhite;
 }
 
 button {
   display: inline-grid;
-  border-radius: 50%;
-  margin: 0;
-  position: absolute;
+  border-radius: 100px;
   background-color: #ff4646;
   border: none;
   color: #fff5c0;
   text-align: center;
   font-size: 150%;
-  padding: 4%;
-  width: 17%;
+  padding: 2% 4%;
+  width: 40%;
+  height: 10%;
   outline: none;
   cursor: pointer;
   margin: 1%;
@@ -37,22 +34,36 @@ button {
 }
 
 button:hover {
-  background-color: #eb8383;
+  background-color: #e83838;
 }
 
 button:active {
-  background-color: #eb8383;
+  background-color: #e83838;
   box-shadow: 0 1px #666;
   transform: translateY(4%);
 }
 
-.special{
+.close{
+  right: 0%;
+  width: 9%;
+  height: 20%;
+  padding: 8% 3.5%;
+  font-size: 50%;
+  position: absolute;
+  border-radius: 0px 100px 100px 0px;
+}
+
+.close:hover{
+  background-color: #cf2b2b;
+}
+
+/*close{
   font-size: 100%;
   border-radius: 50%;
   width: 5%;
   height: 10%;
-  left: 50%
-  position: fixed; /* or position: absolute; */
+  left: 0%
+  position: fixed;
   box-shadow: 0 0px;
   text-align: center;
-}
+}*/
