intial pinpad integration and styling

--- a/instance.css
+++ b/instance.css
@@ -19,7 +19,7 @@ button {
   border-radius: 100px;
   background-color: #ff4646;
   border: none;
-  color: #fff5c0;
+  color: FloralWhite;
   text-align: center;
   font-size: 150%;
   padding: 2% 4%;
