--- a/pinpad.css
+++ b/pinpad.css
@@ -1,12 +1,13 @@
 body {
-  width: 800px;
-  height: 500px;
+  width: 500px;
+  height: 300px;
+  background-color: FloralWhite;
 }
 
 .button {
   display: inline-grid;
   border-radius: 50%;
-  background-color: #083d77; /*#61daff*/
+  background-color: #ff4646;
   border: none;
   color: FloralWhite;
   text-align: center;
@@ -22,17 +23,16 @@ body {
 }
 
 .button:hover {
-  background-color: #234f7e;
+  background-color: #e83838;
 }
 
 .button:active {
-  background-color: #234f7e;
+  background-color: #e83838;
   box-shadow: 0 1px #666;
   transform: translateY(5%);
 }
 
 .header{
-  border: groove;
   border: none;
   text-align: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -42,7 +42,8 @@ body {
   padding-bottom: 2%;
   width: 67.57%;
   font-size: 130%;
-  background-color: #bbbbbb;
+  color: FloralWhite;
+  background-color: #ffb396;
 }
 
 .special{
@@ -55,15 +56,19 @@ div{
   padding-top: 2.8%;
   padding-bottom: 8.1%;
   border-radius: 5.4%;
-  width: 35%; /*320px*/
+  width: 50%; /*320px*/
   max-width: 320px;
   height: 35%; /*300px*/
-  
-  background-color: #374a62;
+  background-color: #ff8585;
   padding-bottom: 4%;
-
 }
 
 h1{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+  font-size: 170%;
+  font-family: Garamond, serif;
+}
+
+::placeholder {
+  color: #f5eecb;
+  opacity: 70%;
 }
