--- a/instance.css
+++ b/instance.css
@@ -9,9 +9,25 @@ h1{
 
 body {
   width: 500px;
-  max-height: 300px;
-  height: 300px;
+  max-height: 350px;
+  height: 350px;
   background-color: FloralWhite;
+}
+
+.pad-fr{
+  width: 500px;
+  height: 350px;
+  position: absolute;
+  padding: 0px;
+  border: 0px;
+  margin: 0px;
+}
+
+#container{
+  position: absolute;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
 }
 
 button {
@@ -55,6 +71,10 @@ button:active {
 
 .close:hover{
   background-color: #cf2b2b;
+}
+
+div {
+  position: relative;
 }
 
 #div{
