--- a/instance.css
+++ b/instance.css
@@ -3,7 +3,7 @@
 }
 
 h1{
-  font-family: Garamond, serif;
+  font-family: 'Courier New', monospace;
   color: #000000;
 }
 
@@ -14,17 +14,17 @@ body {
   background-color: FloralWhite;
 }
 
-.pad-fr{
+/*.pad-fr{
   width: 500px;
   height: 350px;
   position: absolute;
   padding: 0px;
   border: 0px;
   margin: 0px;
-}
+}*/
 
 #container{
-  position: absolute;
+  position: relative;
   margin: 0px;
   padding: 0px;
   border: 0px;
@@ -61,10 +61,10 @@ button:active {
 
 .close{
   right: 0%;
-  width: 9%;
-  height: 20%;
+  width: 15%;
+  height: 23%;
   padding: 8% 3.5%;
-  font-size: 50%;
+  font-size: 60%;
   position: absolute;
   border-radius: 0px 100px 100px 0px;
 }
