--- a/instance.css
+++ b/instance.css
@@ -3,12 +3,12 @@
 }
 
 h1{
-  font-family: 'Courier New', monospace;
+  font-family: Garamond, serif;
   color: #000000;
 }
 
 body {
-  width: 500px;
+  width: 400px;
   max-height: 350px;
   height: 350px;
   background-color: FloralWhite;
@@ -62,7 +62,7 @@ button:active {
 .close{
   right: 0%;
   width: 15%;
-  height: 23%;
+  height: 33%;
   padding: 8% 3.5%;
   font-size: 60%;
   position: absolute;
