--- a/instance.css
+++ b/instance.css
@@ -1,3 +1,37 @@
+/*[data-title]:hover:after {
+  opacity: 1;
+  transition: all 0.1s ease 0.5s;
+  visibility: visible;
+}
+[data-title]:after {
+  content: attr(data-title);
+  position: absolute;
+  bottom: -1.6em;
+  left: 2%;
+  padding: 4px 4px 4px 8px;
+  color: #222;
+  white-space: nowrap; 
+  -moz-border-radius: 5px; 
+  -webkit-border-radius: 5px;  
+  border-radius: 5px;  
+  -moz-box-shadow: 0px 0px 4px #222;  
+  -webkit-box-shadow: 0px 0px 4px #222;  
+  box-shadow: 0px 0px 4px #222;  
+  background-image: -moz-linear-gradient(top, #f8f8f8, #cccccc);  
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f8f8f8),color-stop(1, #cccccc));
+  background-image: -webkit-linear-gradient(top, #f8f8f8, #cccccc);  
+  background-image: -moz-linear-gradient(top, #f8f8f8, #cccccc);  
+  background-image: -ms-linear-gradient(top, #f8f8f8, #cccccc);  
+  background-image: -o-linear-gradient(top, #f8f8f8, #cccccc);
+  opacity: 0;
+  z-index: 99999;
+  visibility: hidden;
+}
+[data-title] {
+  position: relative;
+}
+*/ 
+
 .instance {
     padding-right: 3%;
 }
@@ -41,6 +75,8 @@ div {
     background-color: #a7acc6;   
     width: 100%;
     position: relative;
+    /*margin-left: -8px;
+    margin-top: -8px;*/
 }
 
 #container{
@@ -50,6 +86,44 @@ div {
   padding: 0px;
   border: 0px;
 }
+
+/*----------------------Tooltip styling----------------------*/
+
+#tooltip_tab{
+  position: absolute;
+  display: none;
+  background-color: #a7acc6;
+  border-radius: 15%;
+  animation-name: appear;
+  animation-duration: 1.5s;
+  padding: 1.2% ;
+}
+
+#tooltip_window{
+  position: absolute;
+  display: none;
+  background-color: #a7acc6;
+  border-radius: 15%;
+  animation-name: appear;
+  animation-duration: 1.5s;
+  margin-left: 30%;
+  padding: 1.2% ;
+}
+
+@keyframes appear {
+  0%{opacity: 0;} 
+  50%{opacity: 0;}
+  60%{opacity: 0;} 
+  65%{opacity: .15;} 
+  70%{opacity: .3;} 
+  75%{opacity: .45;} 
+  80%{opacity: .6;} 
+  85%{opacity: .7;} 
+  90%{opacity: .8;} 
+  95%{opacity: .9;} 
+  100%{opacity: 1;} 
+}
+
 /*----------------------Button Container styling----------------------*/
 
 #mainDiv{
@@ -59,6 +133,7 @@ div {
     margin: 5% 0 0;
     width: 95%;
     height: 260px;
+    position: absolute;
 }
 
 #divider{
@@ -84,7 +159,7 @@ button {
   color: FloralWhite;
   text-align: center;
   font-family: Tahoma, serif;
-  font-size: 150%;
+  font-size: 125%;
   padding: 2% 4%;
   width: 80%;
   height: 12%;
@@ -115,10 +190,6 @@ button:active {
     background-color: #4e598c;
     color: FloralWhite;
     box-shadow: 0 2px #999;
-}
-
-.plus{
-
 }
 
 /*-------------------------Close Button Styling-----------------*/
