--- a/instance.css
+++ b/instance.css
@@ -1,36 +1,3 @@
-/*[data-title]:hover:after {
-  opacity: 1;
-  transition: all 0.1s ease 0.5s;
-  visibility: visible;
-}
-[data-title]:after {
-  content: attr(data-title);
-  position: absolute;
-  bottom: -1.6em;
-  left: 2%;
-  padding: 4px 4px 4px 8px;
-  color: #222;
-  white-space: nowrap; 
-  -moz-border-radius: 5px; 
-  -webkit-border-radius: 5px;  
-  border-radius: 5px;  
-  -moz-box-shadow: 0px 0px 4px #222;  
-  -webkit-box-shadow: 0px 0px 4px #222;  
-  box-shadow: 0px 0px 4px #222;  
-  background-image: -moz-linear-gradient(top, #f8f8f8, #cccccc);  
-  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f8f8f8),color-stop(1, #cccccc));
-  background-image: -webkit-linear-gradient(top, #f8f8f8, #cccccc);  
-  background-image: -moz-linear-gradient(top, #f8f8f8, #cccccc);  
-  background-image: -ms-linear-gradient(top, #f8f8f8, #cccccc);  
-  background-image: -o-linear-gradient(top, #f8f8f8, #cccccc);
-  opacity: 0;
-  z-index: 99999;
-  visibility: hidden;
-}
-[data-title] {
-  position: relative;
-}
-*/ 
 
 .instance {
     padding-right: 3%;
@@ -68,15 +35,19 @@ div {
 #tablock{
     color: #2d9bf0;
     font-size: 2.5em;
-    top: -10%;
+    top: -5%;
 }
 
 #header{
     background-color: #a7acc6;   
     width: 100%;
     position: relative;
-    /*margin-left: -8px;
-    margin-top: -8px;*/
+}
+
+#logoimg{
+    width: 11%;
+    height: 15%;
+    padding: 0% 1.5% 0 2%;
 }
 
 #container{
@@ -109,7 +80,7 @@ div {
   border-radius: 0px 0px 5px 5px;
   background-color: #a7acc6;
   animation-name: appear;
-  animation-duration: 1.5s;
+  animation-duration: 1.0s;
   margin-left: 20%;
   margin-top: -.2%; 
   padding: 0% 1.2% .2% 1.2% ;
